--- a/Launcher/Liberation Launcher/My Project/Settings.settings
+++ b/Launcher/Liberation Launcher/My Project/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Version" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
+    <Setting Name="PyEnv" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\Python34</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
