--- a/Launcher/Liberation Launcher/app.config
+++ b/Launcher/Liberation Launcher/app.config
@@ -32,6 +32,9 @@
             <setting name="Version" serializeAs="String">
                 <value>-1</value>
             </setting>
+            <setting name="PyEnv" serializeAs="String">
+                <value>C:\Python34</value>
+            </setting>
         </Ubipy_Launcher.My.MySettings>
     </userSettings>
 </configuration>
