Implemented Last.FM scrobbling
As per issue #9, it now scrobbles to Last.FM. Libre.FM scrobbling isn't
yet finished, but Last.FM seems to work pretty well.

--- a/Launcher/Liberation Launcher/Liberation Launcher.vbproj
+++ b/Launcher/Liberation Launcher/Liberation Launcher.vbproj
@@ -32,7 +32,7 @@
     <SuiteName>Liberation Launcher</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>13</ApplicationRevision>
     <ApplicationVersion>0.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -171,6 +171,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <Content Include="python-3.4.3.msi">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="pygame-3.4-win32.whl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
