--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: python
 python:
   - "3.2"
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get build-dep -qq python3-pygame
-  - sudo apt-get install -qq python3-pygame
+  - sudo apt-get install mercurial
+  - hg clone https://bitbucket.org/pygame/pygame
+  - cd pygame
+  - sudo apt-get install python3-dev python3-numpy libsdl-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsmpeg-dev libportmidi-dev libavformat-dev libswscale-dev libjpeg-dev libfreetype6-dev
+  - python3 setup.py build
+  - sudo python3 setup.py install
+  - cd ..
 # command to install dependencies
 install:
   - "pip install mutagen"
